// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update adds TODO for [tagValidator] and [search]: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag
                    [tagValidator]="myValidator"
                    [(search)]="searchValue"
                    formControlName="tags"
                >
                    Tags
                </tui-input-tag>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-input-tag migration (see https://taiga-ui.dev/components/input-chip):
     - [tagvalidator]: use <tui-input-chip *tuiItem="let ctx" [appearance]="myValidator(ctx.item) ? '' : 'negative'"> inside <tui-textfield multi>. See https://taiga-ui.dev/components/input-chip#customization
     - [(search)]: use (input) on <input tuiInputChip (input)="onSearch($any($event).target.value)"> to track changes; no direct equivalent for programmatic writes. -->
<tui-textfield
                    
                    
                    
                 multi>
<label tuiLabel>
                    Tags
                </label>

<input tuiInputChip formControlName="tags" />
</tui-textfield>",
}
`;

exports[`ng-update migrate TuiInputTagModule to TuiInputChip: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag>
                </tui-input-tag>

                <tui-input-tag
                    [formControl]="control"
                    [tuiTextfieldCleaner]="true"
                >
                    Enter tags
                </tui-input-tag>

                <tui-input-tag
                    formControlName="tags"
                >
                    My tags
                </tui-input-tag>

                <tui-input-tag
                    [(ngModel)]="value"
                >
                    Tags
                </tui-input-tag>
            ",
  "1. After": "
                <tui-textfield multi>
                
<input tuiInputChip />
</tui-textfield>

                <tui-textfield
                    
                    [tuiTextfieldCleaner]="true"
                 multi>
<label tuiLabel>
                    Enter tags
                </label>

<input tuiInputChip [formControl]="control" />
</tui-textfield>

                <tui-textfield
                    
                 multi>
<label tuiLabel>
                    My tags
                </label>

<input tuiInputChip formControlName="tags" />
</tui-textfield>

                <tui-textfield
                    
                 multi>
<label tuiLabel>
                    Tags
                </label>

<input tuiInputChip [(ngModel)]="value" />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputTagModule to TuiInputChip: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputTagModule} from '@taiga-ui/legacy';

                @Component({
                  standalone: true,
                  imports: [TuiInputTagModule],
                  templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
  "1. After": "import { TuiInputChip } from "@taiga-ui/kit";

                                @Component({
                  standalone: true,
                  imports: [TuiInputChip],
                  templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
}
`;

exports[`ng-update moves [disabledItemHandler] to <tui-textfield multi>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag
                    formControlName="tags"
                    [disabledItemHandler]="myHandler"
                >
                    Tags
                </tui-input-tag>",
  "1. After": "
                <tui-textfield
                    
                    
                 multi [disabledItemHandler]="myHandler">
<label tuiLabel>
                    Tags
                </label>

<input tuiInputChip formControlName="tags" />
</tui-textfield>",
}
`;

exports[`ng-update moves [rows] to <tui-textfield multi>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag
                    formControlName="tags"
                    [rows]="3"
                >
                    Tags
                </tui-input-tag>",
  "1. After": "
                <tui-textfield
                    
                    
                 multi [rows]="3">
<label tuiLabel>
                    Tags
                </label>

<input tuiInputChip formControlName="tags" />
</tui-textfield>",
}
`;

exports[`ng-update moves [separator] and [uniqueTags] (→ [unique]) to <input tuiInputChip>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag
                    [separator]="separatorRegex"
                    [uniqueTags]="true"
                    formControlName="tags"
                >
                    Tags
                </tui-input-tag>",
  "1. After": "
                <tui-textfield
                    
                    
                    
                 multi>
<label tuiLabel>
                    Tags
                </label>

<input tuiInputChip formControlName="tags" [separator]="separatorRegex" [unique]="true" />
</tui-textfield>",
}
`;

exports[`ng-update moves placeholder to <input tuiInputChip>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag
                    placeholder="Add tag..."
                    formControlName="tags"
                >
                </tui-input-tag>",
  "1. After": "
                <tui-textfield
                    
                    
                 multi>
                
<input tuiInputChip formControlName="tags" placeholder="Add tag..." />
</tui-textfield>",
}
`;

exports[`ng-update renames [maxLength] to [maxlength] on <input tuiInputChip>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag
                    formControlName="tags"
                    [maxLength]="50"
                >
                    Tags
                </tui-input-tag>",
  "1. After": "
                <tui-textfield
                    
                    
                 multi>
<label tuiLabel>
                    Tags
                </label>

<input tuiInputChip formControlName="tags" [maxlength]="50" />
</tui-textfield>",
}
`;

exports[`ng-update silently removes [editable], [inputHidden], [autoColor], [removable]: test.html 1`] = `
{
  "0. Before": "
                <tui-input-tag
                    formControlName="tags"
                    [editable]="false"
                    [inputHidden]="true"
                    [autoColor]="true"
                    [removable]="false"
                >
                    Tags
                </tui-input-tag>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-input-tag migration (see https://taiga-ui.dev/components/input-chip):
     - [editable]: [editable] on <tui-input-chip *tuiItem> now controls per-chip editing (not the whole field). See https://taiga-ui.dev/components/input-chip. -->
<tui-textfield
                    
                    
                    
                    
                    
                 multi>
<label tuiLabel>
                    Tags
                </label>

<input tuiInputChip formControlName="tags" />
</tui-textfield>",
}
`;
